{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 23,
  "lineage": "ba17f004-0131-9a1f-d920-14512bd9a314",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_eks_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Bastion to access EKS Kubernetes API",
            "from_port": 443,
            "id": "sgrule-961437248",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0fc0d2c012ec463b2",
            "security_group_rule_id": "sgr-0037095e2e1a4ba08",
            "self": false,
            "source_security_group_id": "sg-0beffbefbd3048a23",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.networking",
            "module.eks_cluster_iam_role.aws_iam_role.this",
            "module.eks_cluster_iam_role.aws_iam_role_policy_attachment.managed",
            "module.eks_cluster_iam_role.data.aws_iam_policy_document.assume_role",
            "module.production_eks_cluster.aws_eks_cluster.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "management_to_eks_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Shared Services Management Server (Rancher) to access EKS Kubernetes API",
            "from_port": 443,
            "id": "sgrule-1433137974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0fc0d2c012ec463b2",
            "security_group_rule_id": "sgr-03fe17eb4bd58e66d",
            "self": false,
            "source_security_group_id": "sg-0e1fc7c35e0c5f191",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.networking",
            "data.terraform_remote_state.shared_services_management",
            "module.eks_cluster_iam_role.aws_iam_role.this",
            "module.eks_cluster_iam_role.aws_iam_role_policy_attachment.managed",
            "module.eks_cluster_iam_role.data.aws_iam_policy_document.assume_role",
            "module.production_eks_cluster.aws_eks_cluster.this"
          ]
        }
      ]
    }
  ]
}